# nox_engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_engine.sh
inc/: board.h  chooser.h  generation.h  heuristics.h  magicnumbers.h  move.h  nnue.h  noxengine.h  position.h  report.h  search.h  settings.h  tables.h  traditional.h  utils.h
inc/.cph/: .main.cpp_0c6dc0d82e1fafa317e047b5c774bf92.prob
include/: board.h  eval.h  movegen.h  nnue.h  search.h  tt.h  types.h  uci.h  zobrist.h
neural_net/: noxnet_baseline.nox
src/: board.cpp  eval.cpp  main.cpp  nnue.cpp  search.cpp  uci.cpp  zobrist.cpp
tools/noxnet/: ab_selfplay.py  dataset.py  export_nox.py  model.py  pgn_to_fens.py  score_fens_with_engine.py  train.py
